--- a/.github/workflows/build-template.yml
+++ b/.github/workflows/build-template.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Initialize Nix Flake
         run: |
           mkdir -p my-config && cd my-config
-          nix flake --extra-experimental-features 'nix-command flakes' init -t github:dustinlyons/nixos-config#${{ inputs.template }}
+          nix flake --extra-experimental-features 'nix-command flakes' init -t github:senaint/nixos-config#${{ inputs.template }}
 
       - name: Apply CI User Info
         run: |
